--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -203,7 +203,7 @@ navbar {
 }
 .powerClass {
     cursor: pointer !important;
-    //height: 25px;
+    height: 24px !important;
 }
 
 // @import "src/@fuse/scss/fuse";
