--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -52,6 +52,10 @@
     </div>
     <mat-divider class="borderTop my-8"></mat-divider>
     <div fxLayout fxLayoutAlign="center" class="mb-8">
+        <img src="assets/images/dashboard/edit.png" matTooltip="Change Password"
+        matTooltipPosition="right" (click)="ChangePasswordClick()" class="powerClass px-13">
+    </div>
+    <div fxLayout fxLayoutAlign="center" class="mb-8">
         <img src="assets/images/dashboard/power.png" (click)="logOutClick()" class="powerClass px-16">
     </div>
 </div>
