--- a/src/app/allModules/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/allModules/authentication/forgot-password/forgot-password.component.html
@@ -36,15 +36,16 @@
                   </mat-error>
               </mat-form-field> -->
 
-                <mat-form-field>
+                <mat-form-field [class.mb-20]="!resetPasswordForm.get('newPassword').hasError('required') &&
+                resetPasswordForm.get('newPassword').hasError('pattern')">
                     <input matInput type="password" placeholder="New Password" formControlName="newPassword">
                     <mat-error *ngIf="resetPasswordForm.get('newPassword').hasError('required')">
                         New password is required
                     </mat-error>
                     <mat-error *ngIf="!resetPasswordForm.get('newPassword').hasError('required') &&
                                        resetPasswordForm.get('newPassword').hasError('pattern')">
-                        Passwords must have minimum One Uppercase letter,three lower case letter,two digit,one special
-                        character and minimum length of 8 and don't start with digit
+                        Passwords must have minimum One Uppercase letter,one lower case letter,one digit,one special
+                        character and minimum length of 10 and don't start with digit
                     </mat-error>
                 </mat-form-field>
 
