--- a/src/app/allModules/authentication/change-password-dialog/change-password-dialog.component.html
+++ b/src/app/allModules/authentication/change-password-dialog/change-password-dialog.component.html
@@ -23,7 +23,7 @@
 
       <mat-form-field [class.mb-20]="!resetPasswordForm.get('newPassword').hasError('required') &&
       resetPasswordForm.get('newPassword').hasError('pattern')">
-        <input matInput type="password" placeholder="New Password" formControlName="newPassword" required>
+        <input matInput type="password" placeholder="New Password" matTooltip="Only these special characters are allowed @ $ # ! % * ^ ? & _ , . + : ; < > ~ / -" formControlName="newPassword">
         <mat-error *ngIf="resetPasswordForm.get('newPassword').hasError('required')">
           New password is required
         </mat-error>
@@ -35,7 +35,7 @@
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword" required>
+        <input matInput type="password" placeholder="Confirm Password" matTooltip="Only these special characters are allowed @ $ # ! % * ^ ? & _ , . + : ; < > ~ / -" formControlName="confirmPassword" required>
         <mat-error *ngIf="resetPasswordForm.get('confirmPassword').hasError('required')">
           Password confirmation is required
         </mat-error>
