--- a/src/app/allModules/authentication/change-password/change-password.component.html
+++ b/src/app/allModules/authentication/change-password/change-password.component.html
@@ -16,7 +16,8 @@
 
     </div>
 
-    <div id="reset-password-form-wrapper" [style.background-color]="'white'" fusePerfectScrollbar [@animate]="{value:'*',params:{delay:'300ms',x:'100%'}}">
+    <div id="reset-password-form-wrapper" [style.background-color]="'white'" fusePerfectScrollbar
+        [@animate]="{value:'*',params:{delay:'300ms',x:'100%'}}">
 
         <div id="reset-password-form">
 
@@ -39,19 +40,19 @@
                 </mat-form-field>
 
                 <mat-form-field>
-                    <input matInput type="password" placeholder="New Password" formControlName="newPassword">
+                    <input matInput type="password" placeholder="New Password" matTooltip="Only these special characters are allowed @ $ # ! % * ^ ? & _ , . + : ; < > ~ / -" formControlName="newPassword">
                     <mat-error *ngIf="resetPasswordForm.get('newPassword').hasError('required')">
                         New password is required
                     </mat-error>
                     <mat-error *ngIf="!resetPasswordForm.get('newPassword').hasError('required') &&
                                        resetPasswordForm.get('newPassword').hasError('pattern')">
-                        Passwords must have minimum One Uppercase letter,three lower case letter,two digit,one special
-                        character and minimum length of 8 and don't start with digit
+                        Passwords must have minimum One Uppercase letter,one lower case letter,one digit,one special
+                        character and minimum length of 10 and don't start with digit
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field>
-                    <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword">
+                    <input matInput type="password" placeholder="Confirm Password" matTooltip="Only these special characters are allowed @ $ # ! % * ^ ? & _ , . + : ; < > ~ / -" formControlName="confirmPassword">
                     <mat-error *ngIf="resetPasswordForm.get('confirmPassword').hasError('required')">
                         Password confirmation is required
                     </mat-error>
@@ -61,7 +62,8 @@
                     </mat-error>
                 </mat-form-field>
 
-                <button mat-raised-button class="submit-button" color="accent" aria-label="RESET MY PASSWORD" (click)="ChangePasswordClick()">
+                <button mat-raised-button class="submit-button" color="accent" aria-label="RESET MY PASSWORD"
+                    (click)="ChangePasswordClick()">
                     CHANGE MY PASSWORD
                 </button>
             </form>
@@ -69,7 +71,8 @@
             <div class="login" fxLayout="row" fxLayoutAlign="center center">
                 <a class="link" [routerLink]="'/auth/login'">Go back to login</a>
             </div>
-            <mat-progress-spinner *ngIf="IsProgressBarVisibile" class="ProgressBarPostion" color="accent" mode="indeterminate"></mat-progress-spinner>
+            <mat-progress-spinner *ngIf="IsProgressBarVisibile" class="ProgressBarPostion" color="accent"
+                mode="indeterminate"></mat-progress-spinner>
 
         </div>
     </div>
