--- a/src/app/allModules/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/allModules/authentication/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div id="reset-password" class="inner-scroll" fxLayout="row" fxLayoutAlign="start">
 
-    <div id="reset-password-intro" fxFlex fxHide fxShow.gt-xs>
+    <!-- <div id="reset-password-intro" fxFlex fxHide fxShow.gt-xs>
 
         <div class="logo" [@animate]="{value:'*',params:{scale:'0.2'}}">
             <img src="/assets/images/logos/ExalcaLogoWhite.png">
@@ -14,16 +14,20 @@
             Exalting You
         </div>
 
-    </div>
+    </div> -->
+    <div id="reset-password-intro" fxFlex fxHide fxShow.gt-xs>
+        <div class="welcometoTitle">Welcome to</div>
+        <div class="cloudSolutionPlatformTitle">Cloud Solution Platform</div>
+      </div>
 
     <div id="reset-password-form-wrapper" [style.background-color]="'white'" fusePerfectScrollbar
         [@animate]="{value:'*',params:{delay:'300ms',x:'100%'}}">
 
         <div id="reset-password-form">
 
-            <div class="logo" fxHide.gt-xs>
+            <!-- <div class="logo" fxHide.gt-xs>
                 <img src="/assets/images/logos/ExalcaLogoWhite.png">
-            </div>
+            </div> -->
 
             <div class="title">RESET YOUR PASSWORD</div>
 
