--- a/src/app/allModules/authentication/forgot-password/forgot-password.component.scss
+++ b/src/app/allModules/authentication/forgot-password/forgot-password.component.scss
@@ -5,8 +5,9 @@ forgot-password {
     #reset-password {
         width: 100%;
         overflow: hidden;
-        background: url('/assets/images/backgrounds/dark-material-bg.jpg') no-repeat;
-        background-size: cover;
+        background: url("/assets/images/backgrounds/Bpcloud-Bg.png") no-repeat;
+        // background-size: cover;
+        background-size: 72% 100%;
 
         #reset-password-intro {
             padding: 128px;
@@ -19,7 +20,20 @@ forgot-password {
                 width: 128px;
                 margin-bottom: 32px;
             }
+            .welcometoTitle {
+                color: white;
+                font-size: 42px;
+                font-weight: 500;
+                line-height: 1;
+                margin-bottom: 10px;
+            }
 
+            .cloudSolutionPlatformTitle {
+                color: white;
+                font-size: 60px;
+                font-weight: 500;
+                line-height: 1;
+            }
             .title {
                 font-size: 42px;
                 font-weight: 300;
@@ -34,18 +48,18 @@ forgot-password {
         }
 
         #reset-password-form-wrapper {
-            width: 400px;
-            min-width: 400px;
-            max-width: 400px;
+            width: 28%;
+            min-width: 28%;
+            max-width: 28%;
             overflow: auto;
             -webkit-overflow-scrolling: touch;
 
             @include mat-elevation(16);
 
             @include media-breakpoint('sm') {
-                width: 360px;
-                min-width: 360px;
-                max-width: 360px;
+                width: 28%;
+                min-width: 28%;
+                max-width: 28%;
             }
 
             @include media-breakpoint('xs') {
