Forget password tile changes

--- a/src/app/allModules/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/allModules/authentication/forgot-password/forgot-password.component.html
@@ -18,7 +18,7 @@
     <div id="reset-password-intro" fxFlex fxHide fxShow.gt-xs>
         <div class="welcometoTitle">Welcome to</div>
         <div class="cloudSolutionPlatformTitle">Cloud Solution Platform</div>
-      </div>
+    </div>
 
     <div id="reset-password-form-wrapper" [style.background-color]="'white'" fusePerfectScrollbar
         [@animate]="{value:'*',params:{delay:'300ms',x:'100%'}}">
@@ -29,7 +29,8 @@
                 <img src="/assets/images/logos/ExalcaLogoWhite.png">
             </div> -->
 
-            <div class="title">RESET YOUR PASSWORD</div>
+            <div class="title">Reset Password</div>
+            <div class="border"></div>
 
             <form name="resetPasswordForm" [formGroup]="resetPasswordForm" novalidate>
 
