--- a/src/app/allModules/authentication/forgot-password/forgot-password.component.scss
+++ b/src/app/allModules/authentication/forgot-password/forgot-password.component.scss
@@ -1,7 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
 forgot-password {
-
     #reset-password {
         width: 100%;
         overflow: hidden;
@@ -12,7 +11,7 @@ forgot-password {
         #reset-password-intro {
             padding: 128px;
 
-            @include media-breakpoint('sm') {
+            @include media-breakpoint("sm") {
                 padding: 128px 64px;
             }
 
@@ -56,13 +55,13 @@ forgot-password {
 
             @include mat-elevation(16);
 
-            @include media-breakpoint('sm') {
+            @include media-breakpoint("sm") {
                 width: 28%;
                 min-width: 28%;
                 max-width: 28%;
             }
 
-            @include media-breakpoint('xs') {
+            @include media-breakpoint("xs") {
                 width: 100%;
                 min-width: 100%;
                 max-width: 100%;
@@ -71,7 +70,7 @@ forgot-password {
             #reset-password-form {
                 padding: 128px 48px 48px 48px;
 
-                @include media-breakpoint('xs') {
+                @include media-breakpoint("xs") {
                     text-align: center;
                     padding: 24px;
                 }
@@ -82,7 +81,23 @@ forgot-password {
                 }
 
                 .title {
-                    font-size: 21px;
+                    font-size: 25px;
+                    line-height: 1;
+                    // font-family: Baloo;
+                    line-height: 1.57;
+                    letter-spacing: 2.28px;
+                    text-align: left;
+                    color: #242424;
+                    font-weight: 900;
+                    margin-bottom: 15px;
+                    margin-top: -35px;
+                }
+                .border {
+                    border-bottom: #3a7be3;
+                    border-bottom-style: solid;
+                    margin-left: 20px;
+                    margin-right: 212px;
+                    margin-top: -15px !important;
                 }
 
                 .description {
@@ -96,7 +111,7 @@ forgot-password {
                     mat-form-field {
                         width: 100%;
 
-                        @include media-breakpoint('xs') {
+                        @include media-breakpoint("xs") {
                             width: 80%;
                         }
                     }
@@ -106,7 +121,7 @@ forgot-password {
                         margin: 16px auto;
                         display: block;
 
-                        @include media-breakpoint('xs') {
+                        @include media-breakpoint("xs") {
                             width: 80%;
                         }
                     }
